// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultButton Render Default Option 1`] = `
<a
  className="defaultClass buttonContainer"
  href="/https:/gatsby-sseon-starter.netlify.com/"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  Button
</a>
`;

exports[`DefaultButton Render To Option 1`] = `
<a
  className="defaultClass buttonContainer"
  href="/http:/www.naver.com"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  To Btn
</a>
`;

exports[`DefaultButton Render customClass Option 1`] = `
<a
  className="snsBtn"
  href="/https:/gatsby-sseon-starter.netlify.com/"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  CustomClass Btn
</a>
`;
